<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#212121"
    tools:context=".ui.KeypadFragment">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_all_clear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_all_clear"
                android:textSize="24sp"
                android:textColor="#ffffff"
                android:background="#212121"/>

            <Button
                android:id="@+id/btn_clear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_clear"
                android:textSize="24sp"
                android:textColor="#ffffff"
                android:background="#212121"/>

            <Button
                android:id="@+id/btn_open_bracket"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_open_bracket"
                android:textSize="24sp"
                android:textColor="#ffffff"
                android:background="#212121"/>

            <Button
                android:id="@+id/btn_close_bracket"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_close_bracket"
                android:textSize="24sp"
                android:textColor="#ffffff"
                android:background="#212121"/>


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_seven"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_seven"
                android:textSize="24sp"
                android:textColor="#ffffff"
                android:background="#212121"/>

            <Button
                android:id="@+id/btn_eight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_eight"
                android:textSize="24sp"
                android:textColor="#ffffff"
                android:background="#212121"/>

            <Button
                android:id="@+id/btn_nine"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_nine"
                android:textSize="24sp"
                android:textColor="#ffffff"
                android:background="#212121"/>

            <Button
                android:id="@+id/btn_divide"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_divide"
                android:textSize="24sp"
                android:textColor="#ffffff"
                android:background="#212121"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_four"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_four"
                android:textSize="24sp"
                android:textColor="#ffffff"
                android:background="#212121"/>

            <Button
                android:id="@+id/btn_five"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_five"
                android:textSize="24sp"
                android:textColor="#ffffff"
                android:background="#212121"/>

            <Button
                android:id="@+id/btn_six"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_six"
                android:textSize="24sp"
                android:textColor="#ffffff"
                android:background="#212121"/>

            <Button
                android:id="@+id/btn_multiply"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_multiply"
                android:textSize="24sp"
                android:textColor="#ffffff"
                android:background="#212121"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_one"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_one"
                android:textSize="24sp"
                android:textColor="#ffffff"
                android:background="#212121"/>

            <Button
                android:id="@+id/btn_two"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_two"
                android:textSize="24sp"
                android:textColor="#ffffff"
                android:background="#212121"/>

            <Button
                android:id="@+id/btn_three"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_three"
                android:textSize="24sp"
                android:textColor="#ffffff"
                android:background="#212121"/>

            <Button
                android:id="@+id/btn_subtract"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_subtract"
                android:textSize="24sp"
                android:textColor="#ffffff"
                android:background="#212121"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_dot"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_dot"
                android:textSize="24sp"
                android:textColor="#ffffff"
                android:background="#212121"/>

            <Button
                android:id="@+id/btn_zero"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_zero"
                android:textSize="24sp"
                android:textColor="#ffffff"
                android:background="#212121"/>

            <Button
                android:id="@+id/btn_equal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_equals"
                android:textSize="24sp"
                android:textColor="#ffffff"
                android:background="#212121"/>

            <Button
                android:id="@+id/btn_addition"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_addition"
                android:textSize="24sp"
                android:textColor="#ffffff"
                android:background="#212121"/>

        </TableRow>


    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>